--- a/src/main/webapp/css/game/profile.css
+++ b/src/main/webapp/css/game/profile.css
@@ -56,6 +56,7 @@
     background-size: cover;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
+    background-color: beige;
 }
 
 
