[Feat] game 관련 js 및 소켓 연결 구현

--- a/src/main/webapp/css/result/result.css
+++ b/src/main/webapp/css/result/result.css
@@ -20,7 +20,7 @@
 }
 
 /* 승리/패배 텍스트 영역 */
-#text {
+#result-img {
     background: no-repeat center center;
     background-size: contain;
     height: 25%;
