--- a/src/main/webapp/css/result/result.css
+++ b/src/main/webapp/css/result/result.css
@@ -1,5 +1,5 @@
 /* 모달 배경 전체 */
-#modal {
+#result-modal {
     position: absolute;
     background-color: rgba(0, 0, 0, 0.6);
     height: 100vh;
@@ -45,6 +45,7 @@
     background: no-repeat center center;
     background-size: contain;
     min-width: 80px;
+    border-radius: 10px;
 }
 
 /* 설명 텍스트 */
